kube-manifests/servarr/2_global_policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: servarr
  labels:
    app.kubernetes.io/name: servarr
    app.kubernetes.io/instance: global
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    # Allow access to CoreDNS
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53

    # Allow access to Internet (except for private networks)
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
      ports:
        - port: 443
        - port: 80
